src/assets/scss/theme.scss
@import "variables";
@import "utilities";
@import "fonts";
@import "../../components/typography/headings/headings";
@import "../../components/typography/paragraph/paragraph";
@import "../../components/logo/logo";
@import "../../components/site-name/site-name";
@import "../../components/menus/off-canvas/off-canvas";
@import "../../components/iowa-bar/iowa-bar";

$header-height: 50px;

h1 {
  font-feature-settings: unset;
}

.element-invisible,
.visually-hidden {
  @include element-invisible
}

.Header {
  height: $header-height;

  a {
    font-weight: inherit;
    font-size: inherit;
  }

  &-navToggle {
    height: $header-height;
    width: $header-height;

    svg {
      fill: white;
    }

    @include breakpoint(menu) {
      svg {
        fill: $secondary;
      }
    }
  }

  &-Utils {
    position: absolute;
    height: auto;
    top: 15px;
    right: 15px;

    color: #ffffff;

    a {
      color: #ffffff;
    }

    svg {
      fill: #ffffff;
    }

    @include breakpoint(menu) {
      top: 8px;
      color: $secondary;

      a {
        color: $secondary;
      }

      svg {
        fill: $secondary;
      }
    }
  }

  [dir=ltr] &-button,
  [dir=rtl] &-button {
    border-right: 0;
  }
}

.header--tertiary .uiowa-bar {
  @include breakpoint(sm) {
    position: fixed;
  }

  width: 100%;

  .page__container {
    display: flex;
    align-items: center;
  }
}

.logo-icon--tab {
  // Override left margin to account for
  // menu button.
  @include breakpoint(container) {
    .header--tertiary & {
      margin-left: 0;
    }
  }
}

.Frame-body {
  height: calc(100% - #{$header-height});
  margin-top: $header-height;
}

.Search-label,
.Tree-title {
  color: rgb(34, 37, 43);
  font-family: $font-family-sans-serif;
}

.Tree {
  &-collectionLabel {
    // @todo This should probably be resolved differently.
    font-weight: $font-weight-bold;
    text-transform: uppercase;
    font-family: $font-family-sans-serif;
  }

  &-entityLink:hover,
  &-entityLink:focus {
    background-color: #e1e1e1;

    span {
      text-decoration: underline;
    }
  }
}

// Navigation list
.Tree-title {

}
.Tree

.Pen-info {
  top: calc(100vh - 230px);
}

.Pen-top {
  margin: 20px;
}

.Prose a {
  color: #00558C;
  text-decoration: underline;
}

